[gd_scene load_steps=23 format=3 uid="uid://klg148t7x232"]

[ext_resource type="Script" path="res://game/Boss.gd" id="1_tex4m"]
[ext_resource type="Texture2D" uid="uid://d16kwgl7mct8d" path="res://art/MOFenemies.png" id="2_4ndpc"]
[ext_resource type="PackedScene" uid="uid://i4wshaa0jskp" path="res://game/bullet_handler.tscn" id="2_ldrgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h2dcb"]
atlas = ExtResource("2_4ndpc")
region = Rect2(320, 476, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vu2k"]
atlas = ExtResource("2_4ndpc")
region = Rect2(384, 476, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pbmn"]
atlas = ExtResource("2_4ndpc")
region = Rect2(448, 476, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncfd0"]
atlas = ExtResource("2_4ndpc")
region = Rect2(512, 476, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0b3q"]
atlas = ExtResource("2_4ndpc")
region = Rect2(320, 604, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_801kx"]
atlas = ExtResource("2_4ndpc")
region = Rect2(384, 604, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsbvr"]
atlas = ExtResource("2_4ndpc")
region = Rect2(448, 604, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlbip"]
atlas = ExtResource("2_4ndpc")
region = Rect2(512, 604, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iov3"]
atlas = ExtResource("2_4ndpc")
region = Rect2(448, 540, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epqdy"]
atlas = ExtResource("2_4ndpc")
region = Rect2(512, 540, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dhx8"]
atlas = ExtResource("2_4ndpc")
region = Rect2(320, 540, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk5fl"]
atlas = ExtResource("2_4ndpc")
region = Rect2(384, 540, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cbgn"]
atlas = ExtResource("2_4ndpc")
region = Rect2(48, 477, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohk0r"]
atlas = ExtResource("2_4ndpc")
region = Rect2(112, 477, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0jj"]
atlas = ExtResource("2_4ndpc")
region = Rect2(176, 477, 52, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7pjq"]
atlas = ExtResource("2_4ndpc")
region = Rect2(240, 477, 52, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_c0cfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2dcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vu2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pbmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncfd0")
}],
"loop": true,
"name": &"aya",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0b3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_801kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsbvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlbip")
}],
"loop": true,
"name": &"aya_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iov3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epqdy")
}],
"loop": true,
"name": &"aya_move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dhx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk5fl")
}],
"loop": true,
"name": &"aya_start_move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cbgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohk0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7pjq")
}],
"loop": true,
"name": &"momiji",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61cu2"]
size = Vector2(20, 47)

[sub_resource type="Curve2D" id="Curve2D_1aqwq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 208, 96, 0, 0, 0, 0, 120, 96, 0, 0, 0, 0, 296, 96, 0, 0, 0, 0, 208, 96)
}
point_count = 4

[node name="Boss" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_tex4m")
bullet_handler = ExtResource("2_ldrgy")

[node name="BossBody" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c0cfo")
animation = &"aya_start_move"

[node name="BossHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_61cu2")

[node name="BossAttackTimer" type="Timer" parent="."]

[node name="BossStartTimer" type="Timer" parent="."]
one_shot = true

[node name="BossMovementTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="BossPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_1aqwq")
metadata/_edit_group_ = true

[node name="BossMovementLocation" type="PathFollow2D" parent="BossPath"]
position = Vector2(208, 96)
rotation = 3.14159

[node name="BossStartPosition" type="Marker2D" parent="."]
position = Vector2(180, 96)

[connection signal="timeout" from="BossAttackTimer" to="." method="_on_boss_attack_timer_timeout"]
[connection signal="timeout" from="BossStartTimer" to="." method="_on_boss_start_timer_timeout"]
[connection signal="timeout" from="BossMovementTimer" to="." method="_on_boss_movement_timer_timeout"]
